--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,16 +1,25 @@
 FROM php:8.4-fpm
 
-# Устанавливаем системные зависимости и расширения для PostgreSQL
+# Устанавливаем системные зависимости
 USER root
-RUN apt-get update \
-    && apt-get install -y \
-    zip unzip git curl libpng-dev libonig-dev libxml2-dev \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl \
+    zip \
+    unzip \
+    git \
+    nano \
+    libpng-dev \
+    libonig-dev \
+    libxml2-dev \
     libpq-dev \
-    && docker-php-ext-install pdo_pgsql mbstring exif intl bcmath gd \
-    && apt-get install -y postgresql-client
+    postgresql-client \
+    libzip-dev \
+    && docker-php-ext-configure zip \
+    && docker-php-ext-install pdo_pgsql mbstring exif intl bcmath gd zip \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Устанавливаем Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+RUN curl -sLS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer
 
 # Аргументы и переменные окружения для пользователя
 ARG PUID=1000
@@ -18,7 +27,7 @@ ENV PUID ${PUID}
 ARG PGID=1000
 ENV PGID ${PGID}
 
-# Настроиваем пользователя и группу
+# Настраиваем пользователя и группу
 RUN groupmod -o -g ${PGID} www-data && \
     usermod -o -u ${PUID} -g www-data www-data
 
